commit 10 : documentation of signup and login .
