# app/Http/Controllers/General/Users/Auth/AuthController.php
@@ -14,7 +14,48 @@ use App\Http\Requests\General\Users\Auth\SignupRequest;
 
 class AuthController extends Controller
 {
-
+     /**
+     * @OA\Post(
+     *      path="/api/auth/login",
+     *      operationId="LogInUser",
+     *      tags={"auth"},
+     *      summary="Log In using email or username or mobile number and password",
+     *     @OA\RequestBody(
+     *     required=true,
+     *     @OA\JsonContent(
+      *     oneOf={
+      *     @OA\Schema(ref="#/components/schemas/EmailLogInRequest"),
+      *     @OA\Schema(ref="#/components/schemas/UsernameLogInRequest"),
+      *     @OA\Schema(ref="#/components/schemas/MobileNumberLogInRequest"),
+      * }
+     *     )
+     *     ),
+     *      @OA\Response(
+     *          response=200,
+     *          description="successful",
+     *     @OA\JsonContent(
+     *          @OA\Property (property="isSuccessful",type="boolean",example="true"),
+     *          @OA\Property (property="hasContent",type="boolean",example="true"),
+     *          @OA\Property (property="code",type="integer",example="200"),
+     *          @OA\Property (property="message",type="string",example=""),
+     *          @OA\Property (property="data" ,type="object", ref="#/components/schemas/LogInResponse" )
+     *       )
+     * ),
+     *       @OA\Response(
+     *          response=400,
+     *          description="validation error",
+     *           @OA\JsonContent(
+     *          @OA\Property (property="isSuccessful",type="boolean",example="false"),
+     *          @OA\Property (property="hasContent",type="boolean",example="false"),
+     *          @OA\Property (property="code",type="integer",example="400"),
+     *          @OA\Property (property="message",type="string",example="The selected email is invalid."),
+     *          @OA\Property (property="data" ,type="object", example="null")
+     *          )
+     *      )
+     *     )
+     *
+     *
+     */
     public function login(LoginRequest $loginRequest)
     {
         $userDTO = UserDTO::fromRequest($loginRequest->validated());
@@ -26,7 +67,7 @@ class AuthController extends Controller
      *      path="/api/auth/signup",
      *      operationId="SignupUser",
      *      tags={"auth"},
-     *      summary="Signup using email and password",
+     *      summary="Sign Up using email and password",
      *     @OA\RequestBody(
      *     required=true,
      *     @OA\JsonContent(
@@ -57,11 +98,11 @@ class AuthController extends Controller
      *          @OA\Property (property="code",type="integer",example="400"),
      *          @OA\Property (property="message",type="string",example="The email has already been taken."),
      *          @OA\Property (property="data" ,type="object", example="null")
-     *          )
+     *        )
      *      )
-     *     )
+     *    )
      *
-     * Returns list of projects
+     *
      */
     public function signup(SignupRequest $signupRequest)
     {
