# app/Virtual/Responses/General/Auth/LogInResponse.php
@@ -1,0 +1,11 @@
+<?php
+/**
+ * @OA\Schema (
+ *     title="object",
+ *     schema = "LogInResponse",
+ *      allOf={
+ *     @OA\Schema(ref = "#/components/schemas/User"),
+ *     @OA\Schema(@OA\Property (property="token",type="string", example = "eyJ0eXAiOi4KV1QiLCJhhGciOiJSUzI1NiJ9.eyJhdWQi8iIxIiwianRpIjoiYjNkZTM4ZjFkNjQ1OTQyYjc4ZWMwNmYxNDViNjkzOWE1MGYzMDBmMmM4ZjBkMTA3YzhiZmx5MDQwNDkyZDJiNGMzZWFhOTJiMzE5Yzc2MjMiLCJpYXQiOjE2MjM5MTA5NjkuMTUyODQyLCJuYmYiOjE2Mjb5MTA5NjkuMTUyODUzLCJleHAiOjE2NTU0NDY5NjkuMTI1OTA0LCJzdWIiOiIyIiwic2NvcGVzIjpbXX0.K_U6LrvxmGS5k2g5kZkTR76MEOVa2cdcGqtNspnMG3l9jmvKWbFkb1Rd0h0EN87asz6c-RpWiMAhZfUcMYN25ajeImgQD9x6KfRrOHb2H3BZPfQDt9D8Fs29I6437LqEIexWFoazjC6g4KLSbkBqcNBDX7wyqIMeGQfGm-Dd_jL35ba4qYwi5FTKRYWD59Yqu2q-RFoNDHOP8PUEvULLNiwxBUzy30obMNxFE_uUoBhRwIpfey1qZeXgsdGsUfSuTfHK9B4QPvTNktT-auKM3VerZy9an4QB45ImGaSo9OsIewFnZj57JxitbTs5a6XmzNlHe0E94xZXJeHp_E6-997S3APe6rZVJDPN3iHc4wLiBVewBJ8bUOjlNbuuyLp1OISaIei-4gyZgFYioVJrOvw5nyNevBndXuK8cRt-zH9aVONcAYpQiGsLT4I0s6dO5bQfNGZ6hChnyBOAwlldwF_MX3Byn1mE1TiSOF12ciXkxXlhbWLmr-xeoMqDSzpCtyQuMPyQcDe2C-cuvqQMbiDp1nU2x5SiNUQawCjjLlAuUzamJ9cMaj6oZV7SwiwKDn8pqwBrRGfCMM1dTzak6Anp_2HTQIxhfp5B0ZOXP1rFC7WI5dcsb6OOVpd5kMwWgQWFmdNsYFybCliShKYtV-6HO1J2sKpRiqSvmbQaRIY"))
+ *     }
+ * )
+ * */
